# react-native-openwakeword

./: .npmignore  CHANGELOG.md  LICENSE  Openwakeword.podspec  README.md  nitro.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: android-build.yml  ci.yml  ios-build.yml  release.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/openwakeword/: OpenwakewordPackage.kt
cpp/: HybridOpenwakeword.cpp  HybridOpenwakeword.hpp
example/: App.tsx  Gemfile  README.md  app.json  package.json  tsconfig.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/com.openwakewordexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/OpenwakewordExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/OpenwakewordExample.xcodeproj/: project.pbxproj
example/ios/OpenwakewordExample.xcodeproj/xcshareddata/xcschemes/: OpenwakewordExample.xcscheme
ios/: Bridge.h
src/: index.ts
src/specs/: openwakeword.nitro.ts
